assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

/* reseting all the default element properties*/
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Nunito', sans-serif;
}

/* Background header image*/
#header {
  position: relative;
}

#hero-image {

  background: url(../images/pexels-thgusstavo-santana-3052302.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  height: 600px;
  background-position: center;
}

/* Logo and navigation*/

header .logo img {
  width: 130px;
  position: absolute;
  margin: 10px 40px;
}

header nav {
  position: absolute;
  left: 45%;
  top: 4%;
  margin-right: 100px;
  background: rgba(0, 0, 0, 0.8);
  padding: 10px;
  border-radius: 5px;
}

nav a {
  padding: 10px 20px;
  text-decoration: none;
  color: #fff;
  font-size: 20px;
  letter-spacing: 1px;
  transition: color 0.2s;
}

nav a:hover {
  border-bottom: 2px solid #edba9a;
  color: #edba9a;
}

.in-use {
  border-bottom: 2px solid #edba9a;
  color: #edba9a;
}

/* h2,p and form inputs in homepage and certificate*/
.content-container {
  width: 40%;
  margin: 0 auto;
}

.content-container h2 {
  text-align: center;
  font-size: 36px;
}


.content-container>p {

  text-align: center;
}

#signup {
  padding: 20px 0 100px 0;
}

input[type=text],
input[type=email],
input[type=date],
input[type=time],
select {
  padding: 10px;
  box-sizing: border-box;
  border-radius: 3px;
  outline: none;
  border: 2px solid #666;
}

input:focus {
  border-color: #edba9a;
}

.two-column-row {
  display: flex;
}

.col1 {
  width: 50%;
  padding-right: 10px;
}

.col1 input,
.col1 select {
  width: 100%;
}

.col2 {
  width: 50%;
}

.col2 input {
  width: 100%;
}

#email_add {
  width: 100%;
  padding-top: 15px;
}

#email_add input {
  width: 100%;
}

.submit {
  padding-top: 10px;
  padding-right: 10px;
}

.submit input {
  padding: 10px;
  background-color: #edba9a;
  border: none;
  border-radius: 3px;
}

#term {
  padding-top: 20px;
}

hr {
  border-top: 1px solid #3a3a3a;
  margin: 20px 60px;
}

/* footer */
footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: 'Nunito', sans-serif;
  border-top: 2px solid #aaa;
  width: 80%;
  margin: 0 auto;
  padding: 30px 0;
}

footer .logo {
  text-decoration: none;
  color: #7F4848;
  padding: 0 0 10px 0;
}

footer h1 {
  font-family: 'Allison', cursive;
  font-size: 30px;
  padding: 0 30px 0;
}

.social_media i {
  font-size: 160%;
  color: #7F4848;
  padding: 0 30px;
}

.social_media i:hover {
  color: #BBA79C;
}

/* Page planes text and pictures*/
.content-container-planes-about {
  width: 80%;
  margin: 0 auto;
}

.content-container-planes-about h2 {
  font-size: 36px;
  padding-bottom: 15px;
  font-weight: 300;
}

.content-container-planes-about p {
  color: #555;

}

.content-container-planes-about .two-column-row>div {
  display: flex;
  align-items: center;
}

.col1-planes,
.col2-planes,
.col1-about,
.col2-about {
  width: 50%;
}

.col2-about,
.col2-planes {
  padding-left: 90px;
}

section {
  padding: 100px 0 100px 0;
}

#fly,
#history,
#dynamic,
#ul-cert {
  background-color: #f2f2f2;
}

#school,
#skylane,
#general-price {
  background-color: #e4f7f3;
}

#signup,
#seaplane,
#application-form {
  background-color: #fdf3e5;
}

#student-price {
  background-color: #f5e1e1;
}

#booking {
  background-color: #f2f3db;
}

.col1-planes img,
.col2-planes img {
  width: 100%;
}

/* page about us header and content*/
.header-about {
  height: 600px;
  background-color: #f2f3db;
}

.header-about div {
  position: absolute;
  top: 37%;
  left: 50%;
  transform: translate(-50%, -50%);
}

video {
  box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
  border-radius: 5px;
  border: 1px solid #5a2e13;
  width: 600px;
}

.header-about h2 {
  text-align: center;
  color: #614533;
}

#three-planes-pic {
  width: 300px;
  transform: translate(-60%, -60%);
}

.col2-about img,
.col1-about img {
  width: 100%;
}

#contact {
  background-color: #fdf3e5;
}

.contact-info {
  margin-top: 40px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.contact-info h2 {
  width: 100%;
}

.contact-info>div {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

/* styling flight certificate page*/
.content-container-price {
  width: 50%;
  margin: auto;
}

.content-container-price p,
.content-container-price ul {
  color: #555;
}

.content-container-price h1,
.col1 h1,
.col2 h1,
.price h1,
.price h3,
.content-container h2 {
  font-weight: 300;
  padding-bottom: 20px;
}

.col1 h1,
.col2 h1 {
  text-align: left;
}

.col1 input[type=radio] {
  width: 10%;
}

.col2 input[type=date] {
  padding: 9px;
}

.price h1,
.price h3,
.price ul {
  text-align: center;
}

/* Media query for screen sizes from 1200px wide and down*/
@media screen and (max-width: 1200px) {
  .content-container {
    width: 90%;
  }

  footer {
    flex-wrap: wrap;
  }

  footer .logo {
    margin: 20px 0 0 0;
  }

  footer p {
    font-size: 15px;
  }

  footer h1 {
    margin-top: -20px;
  }

  .social_media i {
    padding: 15px;
  }

  .content-container-price,
  .content-container-planes-about {
    width: 90%;
  }

  .col1 ul li,
  .col2 ul li,
  .price ul li {
    border-bottom: 1px solid #eee;
    padding: 10px 0;
  }

  .history,
  .school {
    flex-wrap: wrap;
  }

  .col1-about>div {
    padding-top: 65px;
  }

  .col1-about,
  .col2-about,
  .col1-planes,
  .col2-planes {
    width: 80%;
    margin: auto;
  }

  .col2-about,
  .col2-planes {
    padding-left: 0;
  }

  .col2-about {
    padding-top: 20px;
  }

  .contact-info {
    width: 80%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
  }

  .contact-info h2 {
    width: 100%;
  }

  .contact-info>div {
    flex-wrap: wrap;
  }

  .contact-info>div div {
    width: 50%;
  }

  .content-container-planes-about .two-column-row {
    flex-wrap: wrap;
  }

  .skylane .col1-planes {
    order: 2;
  }

  .content-container-planes-about .two-column-row {
    margin: 0 auto;
  }

  header nav {
    display: flex;
    justify-content: flex-end;
    right: 0;
    left: auto;
    margin-right: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    background: rgba(0, 0, 0, 0.8);
  }

  header nav a {
    color: #fff;
  }

  /* Media query for screen sizes from 500px wide and down*/
  @media screen and (max-width: 500px) {
    .content-container-planes-about {
      width: 85%;
    }

    .two-column-row {
      flex-wrap: wrap;
    }

    .two-column-row>div {
      width: 100%;
    }

    .col1-planes img,
    .col2-planes img,
    .col1-about img,
    .col2-about img {
      width: 100%;
    }

    .col1-planes,
    .col1-about {
      padding-right: 0;
    }

    .skylane .col1-planes {
      order: 2;
    }

    .content-container-planes-about .two-column-row {
      margin-top: 0;
    }

    .content-container {
      width: 95%;
    }

    .col1 {
      padding-right: 0;
    }

    footer {
      width: 95%;
      flex-wrap: wrap;
      justify-content: center;
    }

    footer p {
      font-size: 10px;
    }

    footer h1 {
      margin-top: -20px;
    }

    .social_media i {
      padding: 15px;
    }

    .contact-info {
      width: auto;
    }

    .contact-info>div {
      flex-wrap: wrap;
    }

    .contact-info>div div {
      width: 100%;
      margin-top: 40px;
    }

    .content-container-price {
      width: 95%;
    }

    .col1 ul li,
    .col2 ul li,
    .price ul li {
      border-bottom: 1px solid #eee;
      padding: 10px 0;
    }

    header .logo img {
      margin-left: 5px;
      width: 25%;
    }

    header nav {
      display: flex;
      justify-content: flex-end;
      right: 0;
      left: auto;
      width: 70%;
      margin-right: 0;
    }

    nav a {
      font-size: 14px;
      padding: 10px;
    }

    #hero-image {
      height: 300px;
      background-position: 72%;
    }

    .header-about {
      height: 300px;
    }


    .header-about div,
    .header-about h2,
    .header-about video {
      font-size: 15px;
      width: 100%;
      top: 35%;
    }
  }

